--- a/calismalar/todo.html
+++ b/calismalar/todo.html
@@ -21,7 +21,7 @@
                     <form id="todoAddForm" class="mt-2">
                         <input type="text" class="form-control mt-2" id="todoName" aria-describedby="todo" placeholder="Todo Giriniz">
                     
-                 <button id=" " type="submit"  class="btn btn-primary mt-4 btn-sm">
+                 <button id="todoAddButton" type="submit"  class="btn btn-primary mt-4 btn-sm">
                         Todo Ekleyin</button>
                     </form>
                 </div>
@@ -56,7 +56,7 @@
                             </a>
                         </li>
                     </ul>
-                      <a href="#"  id="todoClearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
+                      <a href="#" onclick="changeTitle"  id="todoClearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
                 </div>
             </div>
         </div>
