dosya yollari guncellendi

--- a/odev-2/index.html
+++ b/odev-2/index.html
@@ -19,7 +19,7 @@
       <div class="toast-header">
         <div id="liveToast" class="toast success hide" role="alert" aria-live="assertive" aria-atomic="true"
         data-bs-delay="2000">
-          <img src="favicon/system.png" class="rounded mr-2 ml-2 mt-0" alt="...">
+          <img src="image/system.png" class="rounded mr-2 ml-2 mt-0" alt="...">
           <strong class="mr-auto"> System | </strong>
           <small> <i class="fas fa-sync-alt fa-spin"></i> 5 seconds ago</small>
           <div>
@@ -37,7 +37,7 @@
       <div class="toast-header">
         <div id="liveToast" class="toast error hide" role="alert" aria-live="assertive" aria-atomic="true"
         data-bs-delay="2000">
-          <img src="favicon/system.png" class="rounded mr-2 ml-2 mt-0" alt="...">
+          <img src="image/system.png" class="rounded mr-2 ml-2 mt-0" alt="...">
           <strong class="mr-auto"> System | </strong>
           <small> <i class="fas fa-sync-alt fa-spin"></i> 5 seconds ago</small>
           <div>
